testsuite/tests/dependent/should_fail/T16326_Fail6.stderr

T16326_Fail6.hs:9:3: error:
    Illegal visible, dependent quantification in the type of a term:
      forall a -> a -> Foo a
    (GHC does not yet support this)
    In the definition of data constructor ‘MkFoo’
